[package]
name = "nannou-genuary-2025"
version = "0.1.0"
edition = "2021"
authors = ["Sean McLoughlin <smclough@protonmail.com>"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
nannou = "0.19.0"
rand = "0.8"
travelling_salesman = "1.1.22"
time = "0.3.37"

[[example]]
name = "18"
path = "days/18.rs"

[[example]]
name = "19"
path = "days/19.rs"

[[example]]
name = "19_1"
path = "days/19_1.rs"

[[example]]
name = "20"
path = "days/20.rs"

[[example]]
name = "25"
path = "days/25.rs"

[[example]]
name = "26"
path = "days/26.rs"

[[example]]
name = "27"
path = "days/27.rs"

[[example]]
name = "31"
path = "days/31.rs"

[[example]]
name = "31_sortiterator"
path = "days/31_sortiterator.rs"
